# bevy-canvas-2d

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: clear_colour.rs  draw_pixel.rs  draw_pixels.rs  draw_rect.rs  draw_span.rs  simple.rs
examples/shared/: mod.rs
examples/shared/camera/: mod.rs  plugin.rs  systems.rs
examples/shared/random/: mod.rs  plugin.rs  resources.rs  utils.rs
scripts/: overview.py
src/: components.rs  config.rs  lib.rs  main.rs  messages.rs  plugin.rs  resources.rs  settings.rs  systems.rs  types.rs  utils.rs
